# temp-universe-sol-1742255131426-e0a8jg

./: README.md
backend/universe-solana-backend/: Anchor.toml  package.json
backend/universe-solana-backend/programs/universe-solana-backend/: Cargo.toml
backend/universe-solana-backend/programs/universe-solana-backend/src/: lib.rs
backend/universe-solana-backend/tests/: universe-solana-backend.ts
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/models/earth/: scene.gltf
frontend/public/models/mars/: scene.gltf
frontend/public/models/mercury/: scene.gltf
frontend/public/models/moon/: scene.gltf
frontend/public/models/neptune/: scene.gltf
frontend/public/models/saturn/: scene.gltf
frontend/public/models/sun/: scene.gltf:Zone.Identifier
frontend/public/models/uranus/: scene.gltf
frontend/public/models/venus/: scene.gltf
frontend/src/: App.jsx  WalletProvider.jsx  index.css  main.jsx
frontend/src/components/: Dashboard.css  Dashboard.jsx  LandingPage.css  LandingPage.jsx  PlanetGallery.css  PlanetGallery.jsx  PlanetScene.jsx  RoadmapTimeline.css  RoadmapTimeline.jsx
